# notes

./: CMakeLists.txt  cuda.py
event/: channel.cpp  event_dispatcher_epoll.cpp  event_dispatcher_poll.cpp  event_loop.cpp  event_loop_thread.cpp
http/: http_request.cpp  http_response.cpp  http_server.cpp
include/event/: channel.h  event_dispatcher.h  event_loop.h  event_loop_thread.h
include/http/: http_request.h  http_response.h  http_server.h
include/tcp/: acceptor.h  buffer.h  tcp_connection.h  tcp_server.h  thread_pool.h
include/util/: c_head.h  utils.h
pix2pix-pytorch-master/: networks.py  train.py
pytorch-CycleGAN-and-pix2pix-master/: .gitignore
pytorch-CycleGAN-and-pix2pix-master/models/: cycle_gan_model.py  networks.py  pix2pix_model.py
pytorch-CycleGAN-and-pix2pix-master/util/: visualizer.py
tcp/: acceptor.cpp  buffer.cpp  tcp_connection.cpp  tcp_server.cpp  thread_pool.cpp
util/: c_head.cpp  utils.cpp
